--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       rel="stylesheet"
       href="../src/components/Box.css" 
       />
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
